--- a/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -7,6 +7,7 @@
         <!-- Loop over the collection of products -->
         <div *ngFor="let tempProduct of products" class="col-md-3">
           <div class="product-box">
+
             <a routerLink="/products/{{ tempProduct.id }}">
               <img src="{{ tempProduct.imageUrl }}" class="img-responsive" alt="product image">
             </a>
@@ -14,8 +15,10 @@
             <a routerLink="/products/{{ tempProduct.id }}">
               <h1>{{ tempProduct.name }}</h1>
             </a>
+
             <div class="price">{{ tempProduct.unitPrice | currency: 'USD'}}</div>
             <a href="" class="primary-btn">Add to cart</a>
+
           </div>
         </div>
 
@@ -23,8 +26,28 @@
         <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
           No products found.
         </div>
-
       </div>
+      <!-- begin footer -->
+      <div class="footer-pagination">
+        <div class="row">
+          <div class="col-md-6"></div>
+
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-md-9" style="padding-left: 30%">
+
+                <ngb-pagination [(page)]="thePageNumber" [pageSize]="thePageSize" [collectionSize]="theTotalElements"
+                  (pageChange)="listProducts()">
+
+                </ngb-pagination>
+
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <!-- end footer -->
     </div>
   </div>
 </div>
