add country and state backend and joined table

--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -110,7 +110,7 @@
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="country">
-                  <option>TO DO</option>
+                  <option>Select Country</option>
                 </select>
               </div>
             </div>
@@ -139,7 +139,7 @@
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="state">
-                  <option>TO DO</option>
+                  <option>Select State</option>
                 </select>
               </div>
             </div>
