--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -46,7 +46,7 @@
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="country">
-                  <option>TO DO</option>
+                  <option>Select a country</option>
                 </select>
               </div>
             </div>
@@ -75,7 +75,7 @@
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="state">
-                  <option>TO DO</option>
+                  <option>Select a state</option>
                 </select>
               </div>
             </div>
