--- a/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/checkout/checkout.component.html
@@ -45,7 +45,7 @@
             <div class="col-md-2"> <label>Country</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select formControlName="country">
+                <select formControlName="country" (change)="getStates('shippingAddress')">
                   <option *ngFor="let country of countries" [ngValue]="country">
                     {{ country.name }}
                   </option>
@@ -77,7 +77,9 @@
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="state">
-                  <option>Select a state</option>
+                  <option *ngFor="let state of shippingAddressStates" [ngValue]="state">
+                    {{ state.name }}
+                  </option>
                 </select>
               </div>
             </div>
@@ -142,9 +144,9 @@
             <div class="col-md-2"> <label>State</label></div>
             <div class="col-md-9">
               <div class="input-space">
-                <select formControlName="state">
-                  <option>Select State</option>
-                </select>
+                <option *ngFor="let state of shippingAddressStates" [ngValue]="state">
+                  {{ state.name }}
+                </option>
               </div>
             </div>
           </div>
