--- a/03-frontend/angular-ecommerce/src/app/components/search/search.component.html
+++ b/03-frontend/angular-ecommerce/src/app/components/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="form-header">
-  <input #myInput type="text" placeholder="Search for data ..." class="au-input au-input-xl"
+  <input #myInput type="text" placeholder="Search for product " class="au-input au-input-xl"
     (keyup.enter)="doSearch(myInput.value)" />
   <button (click)="doSearch(myInput.value)" class="au-btn-submit" type="submit">
     Search
